[metadata]
name = udpnecho
version = 0.0.1
author = vang1ong7ang
author_email = vang1ong7ang@outlook.com
description = shuangpin tools
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/vang1ong7ang/udpnecho
project_urls =
    Bug Tracker = https://github.com/vang1ong7ang/udpnecho/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
* = pinyin2hanzi/data/*

[options.entry_points]
console_scripts =
    udpnecho = udpnecho:main
